Avoid deprecated constructor, make inner class static